re-styled services with flexbox (de-formatted everything else)

--- a/_team/00-kl.md
+++ b/_team/00-kl.md
@@ -1,6 +1,6 @@
 ---
 layout: side-module
 title: "Kimberly Losenara"
-text: "Kimberly specializes in unique handlettering and typography styles. Her experience at Whitespace in SF has equipped her well for designing mobile experiences."
+text: "Kimberly specializes in website designs, logo and identity branding, and beautiful handlettered type."
 URL: "http://kmbrlygl.github.io"
 ---
