--- a/_team/01-ja.md
+++ b/_team/01-ja.md
@@ -1,6 +1,6 @@
 ---
 layout: side-module
 title: "Joanne Arboleda"
-text: "Joanne thrives on quirky doodles and graphic illustration. She’s worked on establishing visual design standards for mobile and web apps at a startup or two."
+text: "Joanne offers quirky doodles and graphic illustrations that will bring life to your brand."
 URL: "http://synchrohalo.github.io"
 ---
