--- a/_team/02-jt.md
+++ b/_team/02-jt.md
@@ -1,6 +1,6 @@
 ---
 layout: side-module
 title: "Janny Tran"
-text: "Janny enjoys writing on her free time. She uses her background in psychology to create marketing strategies for BWC and for Reach 1600, a non-profit organization dedicated to SAT prep for local students."
+text: "Janny keeps BWC afloat with her sharp business management skills and her cheerleading attitude."
 URL: "#"
 ---
