added circles for portraits to team

--- a/_team/00-kl.md
+++ b/_team/00-kl.md
@@ -3,4 +3,5 @@ layout: side-module
 title: "Kimberly Losenara"
 text: "Kimberly specializes in website designs, logo and identity branding, and beautiful handlettered type."
 URL: "http://kmbrlygl.github.io"
+image: "assets/images/team/kl.png"
 ---
