--- a/_team/01-ja.md
+++ b/_team/01-ja.md
@@ -3,4 +3,5 @@ layout: side-module
 title: "Joanne Arboleda"
 text: "Joanne offers quirky doodles and graphic illustrations that will bring life to your brand."
 URL: "http://synchrohalo.github.io"
+image: "assets/images/team/ja.png"
 ---
