--- a/_team/02-jt.md
+++ b/_team/02-jt.md
@@ -3,4 +3,5 @@ layout: side-module
 title: "Janny Tran"
 text: "Janny keeps BWC afloat with her sharp business management skills and her cheerleading attitude."
 URL: "#"
+image: "assets/images/team/jt.png"
 ---
