added portraits and buttons (still need to fix at smaller widths)

--- a/_team/00-kl.md
+++ b/_team/00-kl.md
@@ -1,6 +1,6 @@
 ---
 layout: side-module
-title: "Kimberly Losenara"
+title: "Kimberly"
 text: "Kimberly specializes in website designs, logo and identity branding, and beautiful handlettered type."
 URL: "http://kmbrlygl.github.io"
 image: "assets/images/team/kl.png"
