--- a/_team/02-jt.md
+++ b/_team/02-jt.md
@@ -1,6 +1,6 @@
 ---
 layout: side-module
-title: "Janny Tran"
+title: "Janny"
 text: "Janny keeps BWC afloat with her sharp business management skills and her cheerleading attitude."
 URL: "#"
 image: "assets/images/team/jt.png"
