--- a/_team/01-ja.md
+++ b/_team/01-ja.md
@@ -1,6 +1,6 @@
 ---
 layout: side-module
-title: "Joanne Arboleda"
+title: "Joanne"
 text: "Joanne offers quirky doodles and graphic illustrations that will bring life to your brand."
 URL: "http://synchrohalo.github.io"
 image: "assets/images/team/ja.png"
