changed button text, added header to team, centered modules at a larger screen width

--- a/_team/00-kl.md
+++ b/_team/00-kl.md
@@ -1,7 +1,8 @@
 ---
 layout: side-module
-title: "Kimberly"
+title: "Kimberly (Kim) Losenara"
 text: "Kimberly specializes in website designs, logo and identity branding, and beautiful handlettered type."
+button: "Kimberly's Portfolio"
 URL: "http://kmbrlygl.github.io"
 image: "assets/images/team/kl.png"
 ---
