--- a/_team/02-jt.md
+++ b/_team/02-jt.md
@@ -1,7 +1,8 @@
 ---
 layout: side-module
-title: "Janny"
+title: "Janny Tran"
 text: "Janny keeps BWC afloat with her sharp business management skills and her cheerleading attitude."
+button: "Janny's LinkedIn"
 URL: "#"
 image: "assets/images/team/jt.png"
 ---
