--- a/_team/00-kl.md
+++ b/_team/00-kl.md
@@ -1,6 +1,6 @@
 ---
 layout: side-module
-title: "Kimberly (Kim) Losenara"
+title: "Kimberly \"Kim\" Losenara"
 text: "Kimberly specializes in website designs, logo and identity branding, and beautiful handlettered type."
 button: "Kimberly's Portfolio"
 URL: "http://kmbrlygl.github.io"
