More copy updates and h4 styling

--- a/_team/00-kl.md
+++ b/_team/00-kl.md
@@ -1,7 +1,8 @@
 ---
 layout: side-module
-title: "Kimberly \"Kim\" Losenara"
-text: "Kimberly specializes in website designs, logo and identity branding, and beautiful handlettered type."
+title: "Kimberly Losenara"
+text: "Kim specializes in logo and brand identity, project management, beautiful hand-lettered type, and 5-minute power naps."
+role: "Co-founder, Designer"
 button: "Kimberly's Portfolio"
 URL: "http://kmbrlygl.github.io"
 image: "assets/images/team/kl.png"
