--- a/_team/01-ja.md
+++ b/_team/01-ja.md
@@ -1,7 +1,8 @@
 ---
 layout: side-module
 title: "Joanne Arboleda"
-text: "Joanne offers quirky doodles and graphic illustrations that will bring life to your brand."
+text: "Joanne specializes in quirky and charming graphic illustrations, responsive web design, and bunny-whisperer to boot!"
+role: "Co-founder, Designer"
 button: "Joanne's Portfolio"
 URL: "http://synchrohalo.github.io"
 image: "assets/images/team/ja.png"
