--- a/_team/02-jt.md
+++ b/_team/02-jt.md
@@ -2,7 +2,8 @@
 layout: side-module
 title: "Janny Tran"
 text: "Janny keeps BWC afloat with her sharp business management skills and her cheerleading attitude."
+role: "Operations Associate"
 button: "Janny's LinkedIn"
-URL: "#"
+URL: "https://www.linkedin.com/in/jannytran/"
 image: "assets/images/team/jt.png"
 ---
