--- a/_team/01-ja.md
+++ b/_team/01-ja.md
@@ -1,7 +1,7 @@
 ---
 layout: side-module
 title: "Joanne Arboleda"
-text: "Joanne specializes in quirky and charming graphic illustrations, responsive web design, and bunny-whispering to boot!"
+text: "Joanne's skill set ranges from quirky graphic illustration and responsive web design to amateur bunny-whispering."
 role: "Co-founder, Designer"
 button: "Joanne's Portfolio"
 URL: "http://synchrohalo.github.io"
