removed sparkle emoji

--- a/_team/02-jt.md
+++ b/_team/02-jt.md
@@ -1,7 +1,7 @@
 ---
 layout: side-module
 title: "Janny Tran"
-text: "Janny keeps BWC afloat with her sharp business management and cheerleading skills, and her undying love for legal paperwork."
+text: "Janny keeps BWC afloat with her sharp business management and cheerleading skills, and her uncanny love for legal paperwork."
 role: "Operations Associate"
 button: "Janny's LinkedIn"
 URL: "https://www.linkedin.com/in/jannytran/"
